# serializer version: 1
# name: test_json_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_json_facets_snapshot
  '''
  {
    "scoped_to_query": false,
    "providers": {
      "chatgpt": 2
    },
    "tags": {},
    "repos": {},
    "cwd_prefixes": {},
    "message_types": {
      "message": 6
    },
    "action_types": {},
    "has_flags": {
      "has_tool_use": 0,
      "has_thinking": 0,
      "has_paste": 0
    },
    "time_range": null,
    "total_conversations": 2,
    "total_messages": 6,
    "scoped": {
      "providers": {
        "chatgpt": 2
      },
      "tags": {},
      "repos": {},
      "message_types": {
        "message": 6
      },
      "action_types": {},
      "has_flags": {
        "has_tool_use": 0,
        "has_thinking": 0,
        "has_paste": 0
      },
      "total_conversations": 2,
      "total_messages": 6
    },
    "global": {
      "providers": {
        "chatgpt": 2
      },
      "tags": {},
      "repos": {},
      "message_types": {
        "message": 6
      },
      "action_types": {},
      "has_flags": {
        "has_tool_use": 0,
        "has_thinking": 0,
        "has_paste": 0
      },
      "total_conversations": 2,
      "total_messages": 6
    },
    "idf": {
      "providers": {
        "chatgpt": 0.0
      },
      "message_types": {
        "message": -1.<HASH>
      }
    }
  }
  
  '''
# ---
# name: test_json_list_snapshot
  '''
  {
    "items": [
      {
        "id": "chatgpt:402913ec-9ef2-493e-b0ac-<HASH>",
        "provider": "chatgpt",
        "title": "corpus-01",
        "target_ref": {
          "target_type": "conversation",
          "target_id": "chatgpt:402913ec-9ef2-493e-b0ac-<HASH>",
          "conversation_id": "chatgpt:402913ec-9ef2-493e-b0ac-<HASH>",
          "identity_key": "conversation:chatgpt:402913ec-9ef2-493e-b0ac-<HASH>"
        },
        "anchor": "conversation-chatgpt-402913ec-9ef2-493e-b0ac-<HASH>",
        "actions": {
          "open": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "annotate": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "created_at": "<TIMESTAMP>",
        "updated_at": "<TIMESTAMP>",
        "date": "<TIMESTAMP>",
        "message_count": 3,
        "messages": 3,
        "tags": []
      },
      {
        "id": "chatgpt:8a476a87-e49d-481d-91d8-<HASH>",
        "provider": "chatgpt",
        "title": "corpus-00",
        "target_ref": {
          "target_type": "conversation",
          "target_id": "chatgpt:8a476a87-e49d-481d-91d8-<HASH>",
          "conversation_id": "chatgpt:8a476a87-e49d-481d-91d8-<HASH>",
          "identity_key": "conversation:chatgpt:8a476a87-e49d-481d-91d8-<HASH>"
        },
        "anchor": "conversation-chatgpt-8a476a87-e49d-481d-91d8-<HASH>",
        "actions": {
          "open": {
            "enabled": true,
            "state": "enabled"
          },
          "copy_link": {
            "enabled": true,
            "state": "enabled"
          },
          "annotate": {
            "enabled": true,
            "state": "enabled"
          }
        },
        "created_at": "<TIMESTAMP>",
        "updated_at": "<TIMESTAMP>",
        "date": "<TIMESTAMP>",
        "message_count": 3,
        "messages": 3,
        "tags": []
      }
    ],
    "total": 2,
    "limit": 2,
    "offset": 0
  }
  
  '''
# ---
# name: test_json_stats_snapshot
  '''
  {
    "dimension": "archive",
    "multi_membership": false,
    "rows": [],
    "summary": {
      "conversations": 2,
      "messages_total": 6,
      "messages_user": 4,
      "messages_assistant": 2,
      "words_approx": 181,
      "attachment_refs": 0,
      "distinct_attachments": 0,
      "providers": {
        "chatgpt": 2
      },
      "date_range": "<TIMESTAMP> to <TIMESTAMP>",
      "filtered": false,
      "embeddings": {
        "embedded_conversations": 0,
        "embedded_messages": 0,
        "pending_embedding_conversations": 2,
        "stale_embedding_messages": 0,
        "messages_missing_embedding_provenance": 0,
        "embedding_coverage_percent": 0.0,
        "embedding_readiness_status": "none",
        "retrieval_ready": false
      }
    }
  }
  
  '''
# ---
# name: test_json_status_snapshot
  '''
  {
    "daemon_liveness": false,
    "archive_root": "<PATH>",
    "db_exists": true,
    "config_exists": false,
    "config_path": "<PATH>",
    "next_action": "polylogue init",
    "diagnostic": {
      "kind": "no_sources",
      "headline": "No configured chat sources.",
      "detail": "No `<PATH>` found. Run `polylogue init` to detect chat sources and write a starter config.",
      "next_action": "polylogue init"
    },
    "conversations": 2,
    "messages": 6,
    "raw_records": 2
  }
  
  '''
# ---
# name: test_plain_count_snapshot
  '''
  2
  
  '''
# ---
# name: test_plain_list_provider_filter_snapshot
  '''
  chatgpt:402913ec-9ef2-49  <TIMESTAMP>  chatgpt       corpus-01 (3 msgs)
  chatgpt:8a476a87-e49d-48  <TIMESTAMP>  chatgpt       corpus-00 (3 msgs)
  
  '''
# ---
# name: test_plain_list_snapshot
  '''
  chatgpt:402913ec-9ef2-49  <TIMESTAMP>  chatgpt       corpus-01 (3 msgs)
  chatgpt:8a476a87-e49d-48  <TIMESTAMP>  chatgpt       corpus-00 (3 msgs)
  
  '''
# ---
# name: test_plain_stats_snapshot
  '''
  
  Conversations: 2
  
  Messages: 6 total (4 user, 2 assistant)
  Words: ~181
  Providers: chatgpt (2)
  Attachment refs: 0
  Unique attachments: 0
  Embeddings: 0/2 convs, 0 msgs (0.0%), pending 2
  Date range: <TIMESTAMP> to <TIMESTAMP>
  
  '''
# ---
